much improved HTTP/2, cookies, more tests